Completed the structure of the project

--- a/src/app/components/all-tasks/all-tasks.component.html
+++ b/src/app/components/all-tasks/all-tasks.component.html
@@ -1,3 +1,5 @@
 <div class="all-tasks">
     <app-status-column></app-status-column>
+    <app-status-column></app-status-column>
+    <app-status-column></app-status-column>
 </div>
