--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -1,1 +1,9 @@
-<h1>this represents individual task</h1>
+<div class="task">
+    <div class="task-content">
+        <textarea name="my-task">Complete this project!</textarea>
+    </div>
+    <div class="movement-buttons">
+        <button>&lt;</button>
+        <button>&gt;</button>
+    </div>
+</div>
