--- a/src/app/components/all-tasks/all-tasks.component.html
+++ b/src/app/components/all-tasks/all-tasks.component.html
@@ -1,5 +1,5 @@
 <div class="all-tasks">
-    <app-status-column></app-status-column>
-    <app-status-column></app-status-column>
-    <app-status-column></app-status-column>
+    <app-status-column [title]="'ToDo'" [latestTask]="latestTask"></app-status-column>
+    <app-status-column [title]="'In Progress'"></app-status-column>
+    <app-status-column [title]="'Done'"></app-status-column>
 </div>
