--- a/src/app/components/status-column/status-column.component.html
+++ b/src/app/components/status-column/status-column.component.html
@@ -1,8 +1,8 @@
 <div class="status-column">
   <div class="status-column-heading">
-    <h3>title</h3>
+    <h3>{{ title }}</h3>
   </div>
   <div class="all-tasks">
-    <app-task></app-task>
+    <app-task *ngFor="let task of allTasks" [task]="task"></app-task>
   </div>
 </div>
