--- a/src/app/components/status-column/status-column.component.scss
+++ b/src/app/components/status-column/status-column.component.scss
@@ -7,6 +7,8 @@
   width: 100%;
   height: 100%;
   border: 1px solid red;
+  overflow-y: auto;
+
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
