--- a/src/app/components/status-column/status-column.component.html
+++ b/src/app/components/status-column/status-column.component.html
@@ -3,6 +3,12 @@
     <h3>{{ title }}</h3>
   </div>
   <div class="all-tasks">
-    <app-task *ngFor="let task of allTasks" [task]="task"></app-task>
+    <app-task
+      *ngFor="let task of allTasks"
+      [task]="task"
+      (taskMovementEvent)="handleTaskMovement($event)"
+      (taskDeletionEvent)="handleTaskDeletion($event)"
+      (taskEditEvent)="handleTaskEdit($event)"
+    ></app-task>
   </div>
 </div>
