--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -1,9 +1,15 @@
 header {
-    width: 100%;
-    height: 50px;
-    border: 1px solid #ccc;
+  width: 100%;
+  padding: 5px 10px;
+  border: 1px solid #ccc;
 
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+
+  span {
+    height: 25px;
+    font-size: 25px;
+    font-weight: 500;
+  }
 }
