--- a/src/app/components/all-tasks/all-tasks.component.scss
+++ b/src/app/components/all-tasks/all-tasks.component.scss
@@ -4,7 +4,8 @@
 
 .all-tasks {
   width: 100%;
-  height: calc(100vh - 188px);
+  // height: calc(100vh - 188px);
+  height: 100%;
   padding: 20px 10px;
   border: 1px solid black;
 
