--- a/src/app/components/task/task.component.html
+++ b/src/app/components/task/task.component.html
@@ -1,7 +1,7 @@
 <div class="task">
   <div class="task-content">
     <textarea #taskTextarea [disabled]="disabledTextarea" name="my-task">{{
-      task.data
+      task.description
     }}</textarea>
   </div>
 
