--- a/src/app/components/status-column/status-column.component.scss
+++ b/src/app/components/status-column/status-column.component.scss
@@ -42,38 +42,7 @@
 
 .add-new-tasks {
   width: 100%;
-  height: 30px;
-  // border: 1px solid green;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  column-gap: 5px;
-
-  input {
-    height: 100%;
-    padding-left: 5px;
-    padding-right: 5px;
-    font-size: 14px;
-    flex: 1;
-  }
-
-  button {
-    height: 30px;
-    width: 30px;
-    cursor: pointer;
-
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  mat-icon {
-    font-size: 16px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
+  height: auto;
 }
 
 .all-tasks {
